force-app/main/default/objects/Account/fields/CP_Extension_Reasons_Given__c.field-meta.xml
<CustomField>
    <fullName>CP_Extension_Reasons_Given__c</fullName>
    <inlineHelpText>Enter the key reasons for the CP Extension Request.  Choose all that apply or enter ones not listed.</inlineHelpText>
    <label>CP Extension Reasons Given</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Antenna Vendor</fullName>
            </value>
            <value>
                <fullName>Coordination with Other Stations</fullName>
            </value>
            <value>
                <fullName>Equipment Failure</fullName>
            </value>
            <value>
                <fullName>Equipment Vendors (other than Antenna)</fullName>
            </value>
            <value>
                <fullName>FCC Approvals</fullName>
            </value>
            <value>
                <fullName>FCC Reimbursement or Timeline</fullName>
            </value>
            <value>
                <fullName>Permitting</fullName>
            </value>
            <value>
                <fullName>Tower Collapse</fullName>
            </value>
            <value>
                <fullName>Tower Crew</fullName>
            </value>
            <value>
                <fullName>Tower Work</fullName>
            </value>
            <value>
                <fullName>Weather</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>