force-app/main/default/objects/Account/fields/CP_Extension_Requested__c.field-meta.xml
<CustomField>
    <fullName>CP_Extension_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if a CP Extension was requested.</inlineHelpText>
    <label>CP Extension Requested</label>
    <type>Checkbox</type>
</CustomField>