force-app/main/default/objects/Account/fields/CP_Extension_shows_risk__c.field-meta.xml
<CustomField>
    <fullName>CP_Extension_shows_risk__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Triggers the creation of an intake request for the Data team to run an analysis. (This is a safeguard, as if you enter the estimated phase date, it will update the tableau viz). This will trigger it to make sure we fill in the phase delay section&amp;followup</inlineHelpText>
    <label>CP Extension shows risk</label>
    <type>Checkbox</type>
</CustomField>