force-app/main/default/objects/Account/fields/CP_Extension_Station_Will_Move_on_Time__c.field-meta.xml
<CustomField>
    <fullName>CP_Extension_Station_Will_Move_on_Time__c</fullName>
    <inlineHelpText>Only enter this response if the station has filed a Construction Permit Extension for the current Repack phase.  Attachment in the filing needs to be reviewed for the answer.  If the answer is no, confirm there is an STA filed asking for a phase change.</inlineHelpText>
    <label>CP Extension - Station Will Move on Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>