force-app/main/default/objects/Account/fields/CP_Off_Air_Status__c.field-meta.xml
<CustomField>
    <fullName>CP_Off_Air_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to Identify all the low power stations that have a facility status of CP Off Air &amp; have not filed a displacement request and have not been assigned a commencement date on channels above 37 and check the box.</description>
    <inlineHelpText>This box is checked when this criteria is met-  Lp&apos;s with a facility status of CP Off Air, who have not filed a displacement request, and have not been assigned a commencement date on channels above 37.</inlineHelpText>
    <label>CP Off Air Status</label>
    <type>Checkbox</type>
</CustomField>