force-app/main/default/objects/Account/fields/CP_Status_Granted__c.field-meta.xml
<CustomField>
    <fullName>CP_Status_Granted__c</fullName>
    <inlineHelpText>Populated when the CP extension is granted. Grabbed from FCC filing.</inlineHelpText>
    <label>CP Status Granted</label>
    <length>32</length>
    <type>Text</type>
</CustomField>