force-app/main/default/objects/Account/fields/Create_Utah_Projects__c.field-meta.xml
<CustomField>
    <fullName>Create_Utah_Projects__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>ONLY FOR ADMIN USE- created as a one time work around for utah projects. Must have utah mailing and this box checked.</inlineHelpText>
    <label>Create Utah Projects</label>
    <type>Checkbox</type>
</CustomField>