force-app/main/default/objects/Account/fields/Current_Channel__c.field-meta.xml
<CustomField>
    <fullName>Current_Channel__c</fullName>
    <inlineHelpText>Updated channel from LMS.  Note a known issue is that LMS may update prior to the actual station move.  Do not use this information to confirm a station is off 600 MHz.</inlineHelpText>
    <label>Current Channel</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>