force-app/main/default/objects/Account/fields/Dashboard_Repack_Phase_Admin__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_Repack_Phase_Admin__c</fullName>
    <inlineHelpText>Used for dashboarding purposes, and also converts repack phase from number to text</inlineHelpText>
    <label>Repack_Phase</label>
    <length>12</length>
    <type>Text</type>
</CustomField>