force-app/main/default/objects/Account/fields/Date_Actual_Off_Air_field_updated__c.field-meta.xml
<CustomField>
    <fullName>Date_Actual_Off_Air_field_updated__c</fullName>
    <inlineHelpText>Used to track the actual date the actual off air field was changed (to track if it was earlier than date updated). Reporting field.)</inlineHelpText>
    <label>Date Actual Off Air field updated</label>
    <type>Date</type>
</CustomField>