force-app/main/default/objects/Account/fields/Date_BAS_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_BAS_Notification_Sent__c</fullName>
    <inlineHelpText>Populated when a BAS Notification has been created (Also populates the BAS Notified Checkbox on Broadcaster)</inlineHelpText>
    <label>Date BAS Notification Sent</label>
    <type>Date</type>
</CustomField>