force-app/main/default/objects/Account/fields/Date_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Date_Delivered__c</fullName>
    <label>Date Delivered</label>
    <type>Date</type>
</CustomField>