force-app/main/default/objects/Account/fields/Date_GC_Terminated__c.field-meta.xml
<CustomField>
    <fullName>Date_GC_Terminated__c</fullName>
    <label>Date GC Terminated</label>
    <type>Date</type>
</CustomField>