force-app/main/default/objects/Account/fields/Date_of_Displacement_Status__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Displacement_Status__c</fullName>
    <inlineHelpText>FCC Date of the latest status for the Displacement Status</inlineHelpText>
    <label>Displacement Status Date</label>
    <type>Date</type>
</CustomField>