force-app/main/default/objects/Account/fields/Date_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Sent__c</fullName>
    <description>Date the envelope was sent. Connects to the DocuSign Status object.</description>
    <label>Date Sent</label>
    <type>Date</type>
</CustomField>