force-app/main/default/objects/Account/fields/Date_Signed__c.field-meta.xml
<CustomField>
    <fullName>Date_Signed__c</fullName>
    <description>This is the date the recipient signed the document. This connects to the DocuSign field &quot;Recipient Signed Date&quot;</description>
    <label>Date Signed</label>
    <type>Date</type>
</CustomField>