force-app/main/default/objects/Account/fields/Days_since_Last_Change__c.field-meta.xml
<CustomField>
    <fullName>Days_since_Last_Change__c</fullName>
    <formula>TODAY() -Enter_Comments_Date_Changed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number showing how long it has been since phase transition updates were modified. Negative 1 indicates no need to follow up.</inlineHelpText>
    <label>Days Since Last Comment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>