force-app/main/default/objects/Account/fields/Deal_Status__c.field-meta.xml
<CustomField>
    <fullName>Deal_Status__c</fullName>
    <inlineHelpText>Status of the Associated Broadcaster Deal.  Auto-filled by a process Broadcaster/Broadcaster Deal Status Update.</inlineHelpText>
    <label>Deal Status</label>
    <length>32</length>
    <type>Text</type>
</CustomField>