force-app/main/default/objects/Account/fields/Delay_Reason__c.field-meta.xml
<CustomField>
    <fullName>Delay_Reason__c</fullName>
    <inlineHelpText>Tracking Please Ignore</inlineHelpText>
    <label>Delay Reason</label>
    <length>128</length>
    <type>Text</type>
</CustomField>