force-app/main/default/objects/Account/fields/Dependency_Map__c.field-meta.xml
<CustomField>
    <fullName>Dependency_Map__c</fullName>
    <formula>HYPERLINK(&quot;https://analytics.eng.t-mobile.com/t/TP/views/FCCPostAuction-DependenciesRelationshipsFacilityIDRoot/FCCPostAuction-DependenciesRelationships?iframeSizedToWindow=true&amp;:embed=y&amp;:showAppBanner=false&amp;:display_count=no&amp;:showVizHome=no#1&quot;, &quot;Dashboard&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Open the Dependency Dashboard.  Must enter Facility ID there.</inlineHelpText>
    <label>Dependency Map</label>
    <type>Text</type>
</CustomField>