force-app/main/default/objects/Account/fields/Displacement_Email_from_April_2018__c.field-meta.xml
<CustomField>
    <fullName>Displacement_Email_from_April_2018__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This is a locked field, showing the displacement emails that were sent out. For record keeping purposes.</inlineHelpText>
    <label>Displacement Email from April 2018</label>
    <type>Checkbox</type>
</CustomField>