force-app/main/default/objects/Account/fields/Displacement_Filed__c.field-meta.xml
<CustomField>
    <fullName>Displacement_Filed__c</fullName>
    <description>Used to keep track of displacements that are filed moving, as of 5/1/2018.  this field is used as a summary field for numerous reports with john/shirley and Mark bishop.</description>
    <formula>IF(Displacement_Status__c = &quot;&quot;, FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This indicates a station has filed a Displacement.</inlineHelpText>
    <label>Displacement Filed</label>
    <type>Checkbox</type>
</CustomField>