force-app/main/default/objects/Account/fields/Displacement_Monitoring__c.field-meta.xml
<CustomField>
    <fullName>Displacement_Monitoring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>field off of the Displacement status (if the displacement status box is filled, this will get checked).</description>
    <inlineHelpText>This field tracks LP displacements, and can be checked/unchecked to assist with reporting. (manually updated).</inlineHelpText>
    <label>Displacement Monitoring</label>
    <type>Checkbox</type>
</CustomField>