force-app/main/default/objects/Account/fields/Displacement_Status__c.field-meta.xml
<CustomField>
    <fullName>Displacement_Status__c</fullName>
    <inlineHelpText>Current status of the FCC Displacement filing.</inlineHelpText>
    <label>Displacement Status</label>
    <length>32</length>
    <type>Text</type>
</CustomField>