force-app/main/default/objects/Account/fields/DocuSign_Subject_Line__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Subject_Line__c</fullName>
    <label>DocuSign Subject Line</label>
    <length>250</length>
    <type>Text</type>
</CustomField>