force-app/main/default/objects/Account/fields/Downstream_2_Details__c.field-meta.xml
<CustomField>
    <fullName>Downstream_2_Details__c</fullName>
    <inlineHelpText>Stations downstream of this station that will be impacted if it is delayed.</inlineHelpText>
    <label>Downstream 2 Details</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>