force-app/main/default/objects/Account/fields/Downstream_Change_Counter__c.field-meta.xml
<CustomField>
    <fullName>Downstream_Change_Counter__c</fullName>
    <inlineHelpText>Triggers process builder updates.</inlineHelpText>
    <label>Downstream Change Counter</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>