force-app/main/default/objects/Account/fields/DRT__c.field-meta.xml
<CustomField>
    <fullName>DRT__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Added to help track DRT stations (Stations that have the same facility Id and Call sign as their parent station. DOES NOT AUTOMATICALLY UPDATE LMS information).</inlineHelpText>
    <label>DRT</label>
    <type>Checkbox</type>
</CustomField>