force-app/main/default/objects/Account/fields/DRT_Channel__c.field-meta.xml
<CustomField>
    <fullName>DRT_Channel__c</fullName>
    <inlineHelpText>DRT channel (temporary)</inlineHelpText>
    <label>DRT Channel</label>
    <length>64</length>
    <type>Text</type>
</CustomField>