force-app/main/default/objects/Account/fields/DRT_Parent_Lookup__c.field-meta.xml
<CustomField>
    <fullName>DRT_Parent_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DRT Parent Lookup</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>DRT Broadcasters</relationshipLabel>
    <relationshipName>Broadcasters</relationshipName>
    <type>Lookup</type>
</CustomField>