force-app/main/default/objects/Account/fields/DRT_Parent_Station__c.field-meta.xml
<CustomField>
    <fullName>DRT_Parent_Station__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used to identify parent stations of DRT&apos;s.</inlineHelpText>
    <label>DRT Parent Station</label>
    <type>Checkbox</type>
</CustomField>