force-app/main/default/objects/Account/fields/DRT_Parent_warning_text__c.field-meta.xml
<CustomField>
    <fullName>DRT_Parent_warning_text__c</fullName>
    <formula>IF( DRT_Parent_Station__c, &quot;This station is a DRT Parent. Please check the Hierarchy link to see related child DRT stations. FCC filings may be fired for the DRT’s and not the parent station.&quot;, null)</formula>
    <label>DRT Parent warning text</label>
    <type>Text</type>
</CustomField>