force-app/main/default/objects/Account/fields/EIRP__c.field-meta.xml
<CustomField>
    <fullName>EIRP__c</fullName>
    <label>EIRP</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>