force-app/main/default/objects/Account/fields/Enter_Comment_here_Long__c.field-meta.xml
<CustomField>
    <fullName>Enter_Comment_here_Long__c</fullName>
    <inlineHelpText>Enter Comment here, not limited to characters.</inlineHelpText>
    <label>Phase Transition Enter Comment here</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>