force-app/main/default/objects/Account/fields/Enter_Comments_Date_Changed__c.field-meta.xml
<CustomField>
    <fullName>Enter_Comments_Date_Changed__c</fullName>
    <inlineHelpText>Hidden field, used to auto populate Last changed date (For phase transition comments)</inlineHelpText>
    <label>Enter Comments Date Changed</label>
    <type>Date</type>
</CustomField>