force-app/main/default/objects/Account/fields/Enter_Phase_Transition_Updates__c.field-meta.xml
<CustomField>
    <fullName>Enter_Phase_Transition_Updates__c</fullName>
    <inlineHelpText>Enter the latest updates on the Phase Transition from the Broadcaster and save the record to keep them permanently. Limited to 255 characters at a time!</inlineHelpText>
    <label>Enter Phase Transition Updates</label>
    <type>TextArea</type>
</CustomField>