force-app/main/default/objects/Account/fields/Envelope_ID__c.field-meta.xml
<CustomField>
    <fullName>Envelope_ID__c</fullName>
    <label>Envelope ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>