force-app/main/default/objects/Account/fields/Envelope_Sender__c.field-meta.xml
<CustomField>
    <fullName>Envelope_Sender__c</fullName>
    <label>Envelope Sender</label>
    <length>50</length>
    <type>Text</type>
</CustomField>