force-app/main/default/objects/Account/fields/Enviro_Permit_Requested_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Enviro_Permit_Requested_Explanation__c</fullName>
    <inlineHelpText>Explanation for the question -  Station has requested necessary Federal, State and/or local permits and/or review of environmental impact for its post-auction facility</inlineHelpText>
    <label>Enviro Permit Requested Explanation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>