force-app/main/default/objects/Account/fields/Environmental_Permit_Req__c.field-meta.xml
<CustomField>
    <fullName>Environmental_Permit_Req__c</fullName>
    <inlineHelpText>Does the Station require Federal, State, and/or local permits, and/or a review of environmental impact, for its post-auction facility?</inlineHelpText>
    <label>Environmental Permit Req</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>