force-app/main/default/objects/Account/fields/Environmental_Permit_Requested__c.field-meta.xml
<CustomField>
    <fullName>Environmental_Permit_Requested__c</fullName>
    <inlineHelpText>Station has requested necessary Federal, State and/or local permits and/or review of environmental impact for its post-auction facility</inlineHelpText>
    <label>Environmental Permit Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>