force-app/main/default/objects/Account/fields/ERP__c.field-meta.xml
<CustomField>
    <fullName>ERP__c</fullName>
    <inlineHelpText>Effective Radiated Power</inlineHelpText>
    <label>ERP</label>
    <length>32</length>
    <type>Text</type>
</CustomField>