force-app/main/default/objects/Account/fields/Escalated_Station_LPTV__c.field-meta.xml
<CustomField>
    <fullName>Escalated_Station_LPTV__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Updated from Notification, and is part of the Escalated LPTV Process</inlineHelpText>
    <label>Escalated Station LPTV</label>
    <type>Checkbox</type>
</CustomField>