force-app/main/default/objects/Account/fields/Est_Pops_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Est_Pops_Hidden__c</fullName>
    <description>Placeholder to capture Pops Category</description>
    <label>Est. Pops (Hidden)</label>
    <length>32</length>
    <type>Text</type>
</CustomField>