force-app/main/default/objects/Account/fields/Estimated_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Date__c</fullName>
    <description>Rename of Station Change Estimated Date for Reports.</description>
    <formula>Station_Change_Estimated_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Date</label>
    <type>Date</type>
</CustomField>