force-app/main/default/objects/Account/fields/Export_Date_from_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Export_Date_from_Salesforce__c</fullName>
    <inlineHelpText>Used when exporting data from Salesforce to SQL DB for PI Probe team</inlineHelpText>
    <label>Export Date from Salesforce</label>
    <type>Date</type>
</CustomField>