force-app/main/default/objects/Account/fields/FAA_Approval_Requested__c.field-meta.xml
<CustomField>
    <fullName>FAA_Approval_Requested__c</fullName>
    <inlineHelpText>The Station has requested FAA approval for its post-auction facility.</inlineHelpText>
    <label>FAA Approval Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>