force-app/main/default/objects/Account/fields/FAA_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>FAA_Approval_Required__c</fullName>
    <inlineHelpText>Does the Station require FAA approval (e.g., completion of FAA Form 7460-1 and a “No Hazard Determination”) in order to construct its post-auction facility?</inlineHelpText>
    <label>FAA Approval Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>