force-app/main/default/objects/Account/fields/Facility_Approval_Received__c.field-meta.xml
<CustomField>
    <fullName>Facility_Approval_Received__c</fullName>
    <inlineHelpText>The Station has received FAA approval for its post-auction facility.</inlineHelpText>
    <label>Facility Approval Received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>