force-app/main/default/objects/Account/fields/Facility_Status__c.field-meta.xml
<CustomField>
    <fullName>Facility_Status__c</fullName>
    <label>Facility Status</label>
    <length>64</length>
    <type>Text</type>
</CustomField>