force-app/main/default/objects/Account/fields/Facility_Type__c.field-meta.xml
<CustomField>
    <fullName>Facility_Type__c</fullName>
    <label>Facility Type</label>
    <length>64</length>
    <type>Text</type>
</CustomField>