force-app/main/default/objects/Account/fields/Federal_Land_TV_Stations__c.field-meta.xml
<CustomField>
    <fullName>Federal_Land_TV_Stations__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This shows if the station is on federal land (checked), or not (unchecked).</inlineHelpText>
    <label>Federal Land (TV Stations)</label>
    <type>Checkbox</type>
</CustomField>