force-app/main/default/objects/Account/fields/Follow_Up_Complete_Fed_Land__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Complete_Fed_Land__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box when the follow up in complete for the broadcaster.</inlineHelpText>
    <label>Follow Up Complete (Fed Land)</label>
    <type>Checkbox</type>
</CustomField>