force-app/main/default/objects/Account/fields/Frequency_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Assigned__c</fullName>
    <label>Frequency Assigned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>