force-app/main/default/objects/Account/fields/Frequency_Upper_Band__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Upper_Band__c</fullName>
    <label>Frequency Upper Band</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>