force-app/main/default/objects/Account/fields/FRN__c.field-meta.xml
<CustomField>
    <fullName>FRN__c</fullName>
    <inlineHelpText>FCC Registration Number</inlineHelpText>
    <label>FRN</label>
    <length>32</length>
    <type>Text</type>
</CustomField>