force-app/main/default/objects/Account/fields/GC_and_Vendor_for_site_Safety__c.field-meta.xml
<CustomField>
    <fullName>GC_and_Vendor_for_site_Safety__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GC and Vendor for site Safety</label>
    <type>Checkbox</type>
</CustomField>