force-app/main/default/objects/Account/fields/GC_for_Decom__c.field-meta.xml
<CustomField>
    <fullName>GC_for_Decom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GC for Decom</label>
    <type>Checkbox</type>
</CustomField>