force-app/main/default/objects/Account/fields/GC_Termination_Notes__c.field-meta.xml
<CustomField>
    <fullName>GC_Termination_Notes__c</fullName>
    <label>GC Termination Notes</label>
    <type>TextArea</type>
</CustomField>