force-app/main/default/objects/Account/fields/Gnd_Elevation__c.field-meta.xml
<CustomField>
    <fullName>Gnd_Elevation__c</fullName>
    <label>Gnd Elevation</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>