force-app/main/default/objects/Account/fields/HAAT__c.field-meta.xml
<CustomField>
    <fullName>HAAT__c</fullName>
    <inlineHelpText>Antenna Height Above Average Terrain</inlineHelpText>
    <label>HAAT</label>
    <length>32</length>
    <type>Text</type>
</CustomField>