force-app/main/default/objects/Account/fields/HP_Reference_date__c.field-meta.xml
<CustomField>
    <fullName>HP_Reference_date__c</fullName>
    <inlineHelpText>Earliest date the sites impacted by the station will be clear of HP 3/4 interference.</inlineHelpText>
    <label>HP Reference date</label>
    <type>Date</type>
</CustomField>