force-app/main/default/objects/Account/fields/Impact_Special_Factors__c.field-meta.xml
<CustomField>
    <fullName>Impact_Special_Factors__c</fullName>
    <inlineHelpText>Special situations that may not be reflected in the impacts calculated by the Spectrum System Data Mart</inlineHelpText>
    <label>Impact - Special Factors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delays Site Clearing</fullName>
            </value>
            <value>
                <fullName>STA impact only</fullName>
            </value>
            <value>
                <fullName>Delays Site Clearing- STA only</fullName>
            </value>
            <value>
                <fullName>Monitoring STA</fullName>
            </value>
            <value>
                <fullName>Potential Impact- TMUS 600 New Sites</fullName>
            </value>
            <value>
                <fullName>No-Impact Canadian Station</fullName>
            </value>
            <value>
                <fullName>Never Impacting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>