force-app/main/default/objects/Account/fields/In_Building_Work_Completed__c.field-meta.xml
<CustomField>
    <fullName>In_Building_Work_Completed__c</fullName>
    <inlineHelpText>Has the Station completed all in-building (equipment) work?</inlineHelpText>
    <label>In-Building Work Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>