force-app/main/default/objects/Account/fields/Intake_Request_Site_Delay__c.field-meta.xml
<CustomField>
    <fullName>Intake_Request_Site_Delay__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Used to hold the record ID of the site delay request.</inlineHelpText>
    <label>Intake Request (Site Delay)</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Broadcasters</relationshipLabel>
    <relationshipName>Broadcasters</relationshipName>
    <type>Lookup</type>
</CustomField>