force-app/main/default/objects/Account/fields/Jira_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Jira_Ticket__c</fullName>
    <description>Jira link or ticket number, will be updated by Broadcaster at Risk Process</description>
    <inlineHelpText>Updated from the Broadcaster at risk process, related to the Case and Jira Ticket that may be open.</inlineHelpText>
    <label>Jira Ticket</label>
    <length>64</length>
    <type>Text</type>
</CustomField>