force-app/main/default/objects/Account/fields/Key_Dates_and_Notifications_link__c.field-meta.xml
<CustomField>
    <fullName>Key_Dates_and_Notifications_link__c</fullName>
    <description>Removed a bootstrap VF page because it was taking up a lot of space. converted into a link, and kept the help section. may want to combine into key details.</description>
    <formula>HYPERLINK(&quot;https://c.na59.visual.force.com/apex/Bootstrap_Key_Dates&quot;, &quot;Link&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Info regarding High and Low power stations ,Views, and detailed origins of LP and HP classifications. Also links to SalesForce Onboarding presentation.</inlineHelpText>
    <label>Key Dates and Notifications Guide</label>
    <type>Text</type>
</CustomField>