force-app/main/default/objects/Account/fields/Key_Status__c.field-meta.xml
<CustomField>
    <fullName>Key_Status__c</fullName>
    <inlineHelpText>Used to signify stations lifespan regarding it&apos;s repack status.</inlineHelpText>
    <label>Key Status (automated)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Part of Repack</fullName>
            </value>
            <value>
                <fullName>Move Pending</fullName>
            </value>
            <value>
                <fullName>CP Extended (Still Open)</fullName>
            </value>
            <value>
                <fullName>Fully Repacked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>