force-app/main/default/objects/Account/fields/Key_Zombie_Flag__c.field-meta.xml
<CustomField>
    <fullName>Key_Zombie_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to flag key auction winner stations.  This will trigger a task to review any new filings this station makes.</inlineHelpText>
    <label>Key Zombie Flag</label>
    <type>Checkbox</type>
</CustomField>