force-app/main/default/objects/Account/fields/Lat_DRT__c.field-meta.xml
<CustomField>
    <fullName>Lat_DRT__c</fullName>
    <inlineHelpText>Monitoring DRT Notes</inlineHelpText>
    <label>Lat DRT</label>
    <type>TextArea</type>
</CustomField>