force-app/main/default/objects/Account/fields/Lat_Number__c.field-meta.xml
<CustomField>
    <fullName>Lat_Number__c</fullName>
    <inlineHelpText>Conversion field for Lat (updated via etl, as a text field). this changes it to number for EA and reporting</inlineHelpText>
    <label>Lat Number</label>
    <precision>12</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>