force-app/main/default/objects/Account/fields/Latest_Modification_Filed__c.field-meta.xml
<CustomField>
    <fullName>Latest_Modification_Filed__c</fullName>
    <inlineHelpText>The purpose of the latest FCC Filing of a modification request.</inlineHelpText>
    <label>Latest Modification Filed</label>
    <length>128</length>
    <type>Text</type>
</CustomField>