force-app/main/default/objects/Account/fields/Latest_Modification_Status__c.field-meta.xml
<CustomField>
    <fullName>Latest_Modification_Status__c</fullName>
    <inlineHelpText>The status of the latest FCC Filing of a modification request.</inlineHelpText>
    <label>Latest Modification Status</label>
    <length>32</length>
    <type>Text</type>
</CustomField>