force-app/main/default/objects/Account/fields/Latest_Modification_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Modification_Status_Date__c</fullName>
    <inlineHelpText>The Status Date of the latest FCC Filing of a modification request.</inlineHelpText>
    <label>Latest Modification Status Date</label>
    <type>Date</type>
</CustomField>